--- a/index.html
+++ b/index.html
@@ -17,31 +17,61 @@
 			<h1 class="heading1">Tell Powerful Stories</h1>
 			<p class="paragraph1">Create text based videos from your phone</p>
 		</section>
-		<section class="section-feature-left">
-			<h1 class="heading2">Text overlays</h1>
-			<h1 class="heading3">Add text</h1>
-			<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
-		</section>
+
 		<section class="section-feature-right">
-			<h1 class="heading2">Animations</h1>
-			<h1 class="heading3">Edit Text</h1>
-			<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
+			<div class="textRight">
+				<h1 class="heading2">Animations</h1>
+				<h1 class="heading3">Edit Text</h1>
+				<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
+			</div>
+			<img className="rightSectionImg" src="text.png" width="264" height="515"/>
 		</section>
+
 		<section class="section-feature-left">
-			<h1 class="heading2">Background Image</h1>
-			<h1 class="heading3">Edit Text</h1>
-			<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
+			<div class="textLeft">
+				<h1 class="heading2">Text overlays</h1>
+				<h1 class="heading3">Add text</h1>
+				<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
+			</div>
+			<img className="leftSectionImg" src="text.png" width="264" height="515"/>
 		</section>
+
 		<section class="section-feature-right">
-			<h1 class="heading2">Background Videos</h1>
-			<h1 class="heading3">Edit Text</h1>
-			<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
+			<div class="textRight">
+				<h1 class="heading2">Animations</h1>
+				<h1 class="heading3">Edit Text</h1>
+				<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
+			</div>
+			<img className="rightSectionImg" src="text.png" width="264" height="515"/>
 		</section>
+
 		<section class="section-feature-left">
-			<h1 class="heading2">Stock videos and footage</h1>
-			<h1 class="heading3">Edit Text</h1>
-			<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
+			<div class="textLeft">
+				<h1 class="heading2">Text overlays</h1>
+				<h1 class="heading3">Add text</h1>
+				<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
+			</div>
+			<img className="leftSectionImg" src="text.png" width="264" height="515"/>
 		</section>
+
+		<section class="section-feature-right">
+			<div class="textRight">
+				<h1 class="heading2">Animations</h1>
+				<h1 class="heading3">Edit Text</h1>
+				<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
+			</div>
+			<img className="rightSectionImg" src="text.png" width="264" height="515"/>
+		</section>
+
+		<section class="section-feature-left">
+			<div class="textLeft">
+				<h1 class="heading2">Text overlays</h1>
+				<h1 class="heading3">Add text</h1>
+				<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
+			</div>
+			<img className="leftSectionImg" src="text.png" width="264" height="515"/>
+		</section>
+
 		<footer>
 			
 		</footer>
