--- a/index.html
+++ b/index.html
@@ -18,62 +18,21 @@
 			<p class="paragraph1">Create text based videos from your phone</p>
 		</section>
 
-		<section class="section-feature-right">
-			<div class="textRight">
-				<h1 class="heading2">Animations</h1>
-				<h1 class="heading3">Edit Text</h1>
-				<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
-			</div>
-			<img className="rightSectionImg" src="text.png" width="264" height="515"/>
-		</section>
+		<div class="section">
+			<div class="sectionLeft"></div>
+			<div class="sectionRight"></div>
+		</div>
 
-		<section class="section-feature-left">
-			<div class="textLeft">
-				<h1 class="heading2">Text overlays</h1>
-				<h1 class="heading3">Add text</h1>
-				<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
-			</div>
-			<img className="leftSectionImg" src="text.png" width="264" height="515"/>
-		</section>
+		<div class="section">
+			<div class="sectionLeft"></div>
+			<div class="sectionRight"></div>
+		</div>
 
-		<section class="section-feature-right">
-			<div class="textRight">
-				<h1 class="heading2">Animations</h1>
-				<h1 class="heading3">Edit Text</h1>
-				<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
-			</div>
-			<img className="rightSectionImg" src="text.png" width="264" height="515"/>
-		</section>
+		<div class="section">
+			<div class="sectionLeft"></div>
+			<div class="sectionRight"></div>
+		</div>
 
-		<section class="section-feature-left">
-			<div class="textLeft">
-				<h1 class="heading2">Text overlays</h1>
-				<h1 class="heading3">Add text</h1>
-				<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
-			</div>
-			<img className="leftSectionImg" src="text.png" width="264" height="515"/>
-		</section>
-
-		<section class="section-feature-right">
-			<div class="textRight">
-				<h1 class="heading2">Animations</h1>
-				<h1 class="heading3">Edit Text</h1>
-				<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
-			</div>
-			<img className="rightSectionImg" src="text.png" width="264" height="515"/>
-		</section>
-
-		<section class="section-feature-left">
-			<div class="textLeft">
-				<h1 class="heading2">Text overlays</h1>
-				<h1 class="heading3">Add text</h1>
-				<p class="paragraph2">You can edit text inside a frame by tapping the text button shown above.</p>
-			</div>
-			<img className="leftSectionImg" src="text.png" width="264" height="515"/>
-		</section>
-
-		<footer>
-			
-		</footer>
+		<footer></footer>
 	</body>
 </html>
