--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 		<title>Frames</title>
 		<link rel="stylesheet" href="index.css">
 		<link rel="stylesheet" href="mobile.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header>
 		</header>
 		<section class="section-one">
-			<video width="264" height="471" class="main-video">
+			<video class="main-video">
   				<source src="mov_bbb.mp4" type="video/mp4">
   				<source src="mov_bbb.ogg" type="video/ogg">
   				Your browser does not support HTML5 video.
