--- a/index.html
+++ b/index.html
@@ -10,27 +10,88 @@
 		<header>
 		</header>
 		<section class="section-one">
-			<video class="main-video">
-  				<source src="mov_bbb.mp4" type="video/mp4">
-  				<source src="mov_bbb.ogg" type="video/ogg">
+			<video class="main-video" playsinline="" autoplay="" muted="" loop="">
+  				<source src="main.mp4" type="video/mp4">
   				Your browser does not support HTML5 video.
 			</video>
 			<h1 class="heading1">Tell Powerful Stories</h1>
-			<p class="paragraph1">Create text based videos from your phone</p>
+			<p class="paragraph1">Create text based vertical video content from your iPhone</p>
+			<p class="sub-paragraph">Stitch multiple images, videos, add text overlays and share within minutes.</p>
 		</section>
 
 		<div class="section">
+			<div class="sectionLeft">
+				<video class="feature-video" playsinline="" autoplay="" muted="" loop="">
+  					<source src="text.mp4" type="video/mp4">
+  					Your browser does not support HTML5 video.
+				</video>
+			</div>
+			<div class="sectionRight">
+				<div class="textDivRight">
+					<h1 class="heading2">Add text</h1>
+					<h1 class="heading3">Add text overlays<br/> over videos.</h1>
+					<p class="paragraph2">Animate, Change font, choose a color, resize and align your text as you please.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="section">
+			<div class="sectionLeft">
+				<div class="textDivLeft">
+					<h1 class="heading2">Background Images and Videos</h1>
+					<h1 class="heading3">Create visually stimulating content.</h1>
+					<p class="paragraph2">Add relevant background images or videos to compliment with your text and increase engagement.</p>
+				</div>
+			</div>
+			<div class="sectionRight">
+				<video class="feature-video" playsinline="" autoplay="" muted="" loop="">
+  					<source src="background.mp4" type="video/mp4">
+  					Your browser does not support HTML5 video.
+				</video>
+			</div>
+		</div>
+
+		<div class="section">
 			<div class="sectionLeft"></div>
+			<div class="sectionRight">
+				<div class="textDivRight">
+					<h1 class="heading2">Stock Footage</h1>
+					<h1 class="heading3"> Curated quality <br/>stock footage.</h1>
+					<p class="paragraph2">Choose your background image or video from a collection of breathtaking stock footage or import your own background photo or video.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="section">
+			<div class="sectionLeft">
+				<div class="textDivLeft">
+					<h1 class="heading2">Export</h1>
+					<h1 class="heading3">Idea to video <br/>made simple.</h1>
+					<p class="paragraph2">Export your creation into a video.</p>
+				</div>
+			</div>
 			<div class="sectionRight"></div>
 		</div>
 
 		<div class="section">
 			<div class="sectionLeft"></div>
-			<div class="sectionRight"></div>
+			<div class="sectionRight">
+				<div class="textDivRight">
+					<h1 class="heading2">Built for vertical video.</h1>
+					<h1 class="heading3">Step up your <br/>IGTV game</h1>
+					<p class="paragraph2">Choose your background image or video from a collection of breathtaking stock footage or import your own background photo or video.</p>
+				</div>
+			</div>
 		</div>
 
 		<div class="section">
-			<div class="sectionLeft"></div>
+			<div class="sectionLeft">
+				<div class="textDivLeft">
+					<h1 class="heading2">One price.</h1>
+					<h1 class="heading3">No subscriptions. Updated regularly.</h1>
+					<p class="paragraph2">Export your creation into a video.</p>
+				</div>
+			</div>
 			<div class="sectionRight"></div>
 		</div>
 
