--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 		</div>
 
 		<div class="section">
-			<div class="sectionLeft"></div>
+			<div class="sectionLeft">
+				<img src="stock.png"class="stock"/>
+			</div>
 			<div class="sectionRight">
 				<div class="textDivRight">
 					<h1 class="heading2">Stock Footage</h1>
@@ -65,24 +67,16 @@
 		<div class="section">
 			<div class="sectionLeft">
 				<div class="textDivLeft">
-					<h1 class="heading2">Export</h1>
-					<h1 class="heading3">Idea to video <br/>made simple.</h1>
-					<p class="paragraph2">Export your creation into a video.</p>
-				</div>
-			</div>
-			<div class="sectionRight"></div>
-		</div>
-
-		<div class="section">
-			<div class="sectionLeft"></div>
-			<div class="sectionRight">
-				<div class="textDivRight">
 					<h1 class="heading2">Built for vertical video.</h1>
 					<h1 class="heading3">Step up your <br/>IGTV game</h1>
 					<p class="paragraph2">Choose your background image or video from a collection of breathtaking stock footage or import your own background photo or video.</p>
 				</div>
 			</div>
+			<div class="sectionRight">
+				<img src="igtv.png"class="stock"/>
+			</div>
 		</div>
+
 
 		<div class="section">
 			<div class="sectionLeft">
