--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	</head>
 	<body>
 		<header>
+			<link href=""><img class="logo" src="logo.png"/></link>
+			<link href=""><img class="download" src="appstore.png"/></link>
 		</header>
 		<section class="section-one">
 			<video class="main-video" playsinline="" autoplay="" muted="" loop="">
