--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 	</head>
 	<body>
 		<header>
-			<link href=""><img class="logo" src="logo.png"/></link>
-			<link href=""><img class="download" src="appstore.png"/></link>
+			<a href=""><img class="logo" src="logo.png"/></a>
+			<a href=""><img class="ph" src="ph.png"/></a>
+			<a href=""><img class="tw" src="twitter.png"/></a>
+			<a href=""><img class="ig" src="instagram.png"/></a>
+			<a href="https://itunes.apple.com/us/app/frames-create-short-videos/id1445360125?mt=8" target="_blank"><img class="download" src="appstore.png" /></a>
 		</header>
 		<section class="section-one">
 			<video class="main-video" playsinline="" autoplay="" muted="" loop="">
@@ -81,14 +84,14 @@
 
 
 		<div class="section">
-			<div class="sectionLeft">
-				<div class="textDivLeft">
+			<div class="sectionLeft"></div>
+			<div class="sectionRight">
+				<div class="textDivRight">
 					<h1 class="heading2">One price.</h1>
 					<h1 class="heading3">No subscriptions. Updated regularly.</h1>
 					<p class="paragraph2">Export your creation into a video.</p>
 				</div>
 			</div>
-			<div class="sectionRight"></div>
 		</div>
 
 		<footer></footer>
