mor eupdates to mobile version and content

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</div>
 			<div class="sectionRight">
 				<div class="textDivRight">
-					<h1 class="heading2">Add text</h1>
+					<h1 class="heading2">Text Overlays</h1>
 					<h1 class="heading3">Add text overlays<br/> over videos.</h1>
 					<p class="paragraph2">Animate, Change font, choose a color, resize and align your text as you please.</p>
 				</div>
