--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
   				<source src="main.mp4" type="video/mp4">
   				Your browser does not support HTML5 video.
 			</video>
-			<h1 class="heading1">Tell Powerful Stories</h1>
-			<p class="paragraph1">Create text based vertical video content from your iPhone</p>
-			<p class="sub-paragraph">Stitch multiple images, videos, add text overlays and share within minutes.</p>
+			<h1 class="heading1">Tell Powerful Stories.</h1>
+			<p class="sub-paragraph">Create text based vertical video content from your iPhone. Stitch multiple images, videos, add text overlays and share it within minutes.</p>
 		</section>
 
 		<div class="section">
@@ -33,7 +32,7 @@
 			</div>
 			<div class="sectionRight">
 				<div class="textDivRight">
-					<h1 class="heading2">Text Overlays</h1>
+					<h1 class="heading2">Text Overlays.</h1>
 					<h1 class="heading3">Add text overlays<br/> over videos.</h1>
 					<p class="paragraph2">Animate, Change font, choose a color, resize and align your text as you please.</p>
 				</div>
@@ -43,7 +42,7 @@
 		<div class="section">
 			<div class="sectionLeft">
 				<div class="textDivLeft">
-					<h1 class="heading2">Background Images and Videos</h1>
+					<h1 class="heading2">Background Images and Videos.</h1>
 					<h1 class="heading3">Create visually stimulating content.</h1>
 					<p class="paragraph2">Add relevant background images or videos to compliment with your text and increase engagement.</p>
 				</div>
@@ -62,7 +61,7 @@
 			</div>
 			<div class="sectionRight">
 				<div class="textDivRight">
-					<h1 class="heading2">Stock Footage</h1>
+					<h1 class="heading2">Stock Footage.</h1>
 					<h1 class="heading3"> Curated quality <br/>stock footage.</h1>
 					<p class="paragraph2">Choose your background image or video from a collection of breathtaking stock footage or import your own background photo or video.</p>
 				</div>
@@ -73,27 +72,31 @@
 			<div class="sectionLeft">
 				<div class="textDivLeft">
 					<h1 class="heading2">Built for vertical video.</h1>
-					<h1 class="heading3">Step up your <br/>IGTV game</h1>
+					<h1 class="heading3">Step up your <br/>IGTV game.</h1>
 					<p class="paragraph2">Choose your background image or video from a collection of breathtaking stock footage or import your own background photo or video.</p>
 				</div>
 			</div>
 			<div class="sectionRight">
-				<img src="igtv.png"class="stock"/>
+				<img src="igtv.png"class="igtv"/>
 			</div>
 		</div>
 
 
 		<div class="section">
-			<div class="sectionLeft"></div>
+			<div class="sectionLeft">
+				<img src="apps.png"class="apps"/>
+			</div>
 			<div class="sectionRight">
 				<div class="textDivRight">
 					<h1 class="heading2">One price.</h1>
 					<h1 class="heading3">No subscriptions. Updated regularly.</h1>
-					<p class="paragraph2">Export your creation into a video.</p>
+					<p class="paragraph2">A product is never perfect, frames will undergo constant improvements based on your feedback. New animations, fonts, and other content will be regularly added.</p>
 				</div>
 			</div>
 		</div>
 
-		<footer></footer>
+		<footer>
+			
+		</footer>
 	</body>
 </html>
