website is complete

--- a/index.html
+++ b/index.html
@@ -90,13 +90,12 @@
 				<div class="textDivRight">
 					<h1 class="heading2">One price.</h1>
 					<h1 class="heading3">No subscriptions. Updated regularly.</h1>
-					<p class="paragraph2">A product is never perfect, frames will undergo constant improvements based on your feedback. New animations, fonts, and other content will be regularly added.</p>
+					<p class="paragraph2">A product is never perfect, this app will undergo constant improvements based on your feedback. New animations, fonts, and other content will be regularly added.</p>
 				</div>
 			</div>
 		</div>
 
 		<footer>
-			
 		</footer>
 	</body>
 </html>
