--- a/index.html
+++ b/index.html
@@ -1,101 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Frames</title>
+		<title>Layer</title>
 		<link rel="stylesheet" href="index.css">
 		<link rel="stylesheet" href="mobile.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
-	<body>
-		<header>
-			<a href=""><img class="logo" src="logo.png"/></a>
-			<a href=""><img class="ph" src="ph.png"/></a>
-			<a href=""><img class="tw" src="twitter.png"/></a>
-			<a href=""><img class="ig" src="instagram.png"/></a>
-			<a href="https://itunes.apple.com/us/app/frames-create-short-videos/id1445360125?mt=8" target="_blank"><img class="download" src="appstore.png" /></a>
-		</header>
-		<section class="section-one">
-			<video class="main-video" playsinline="" autoplay="" muted="" loop="">
-  				<source src="main.mp4" type="video/mp4">
-  				Your browser does not support HTML5 video.
-			</video>
-			<h1 class="heading1">Tell Powerful Stories.</h1>
-			<p class="sub-paragraph">Create text based vertical video content from your iPhone. Stitch multiple images, videos, add text overlays and share it within minutes.</p>
-		</section>
-
-		<div class="section">
-			<div class="sectionLeft">
-				<video class="feature-video" playsinline="" autoplay="" muted="" loop="">
-  					<source src="text.mp4" type="video/mp4">
-  					Your browser does not support HTML5 video.
-				</video>
-			</div>
-			<div class="sectionRight">
-				<div class="textDivRight">
-					<h1 class="heading2">Text Overlays.</h1>
-					<h1 class="heading3">Add text overlays<br/> over videos.</h1>
-					<p class="paragraph2">Animate, Change font, choose a color, resize and align your text as you please.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="section">
-			<div class="sectionLeft">
-				<div class="textDivLeft">
-					<h1 class="heading2">Background Images and Videos.</h1>
-					<h1 class="heading3">Create visually stimulating content.</h1>
-					<p class="paragraph2">Add relevant background images or videos to compliment with your text and increase engagement.</p>
-				</div>
-			</div>
-			<div class="sectionRight">
-				<video class="feature-video" playsinline="" autoplay="" muted="" loop="">
-  					<source src="background.mp4" type="video/mp4">
-  					Your browser does not support HTML5 video.
-				</video>
-			</div>
-		</div>
-
-		<div class="section">
-			<div class="sectionLeft">
-				<img src="stock.png"class="stock"/>
-			</div>
-			<div class="sectionRight">
-				<div class="textDivRight">
-					<h1 class="heading2">Stock Footage.</h1>
-					<h1 class="heading3"> Curated quality <br/>stock footage.</h1>
-					<p class="paragraph2">Choose your background image or video from a collection of breathtaking stock footage or import your own background photo or video.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="section">
-			<div class="sectionLeft">
-				<div class="textDivLeft">
-					<h1 class="heading2">Built for vertical video.</h1>
-					<h1 class="heading3">Step up your <br/>IGTV game.</h1>
-					<p class="paragraph2">Choose your background image or video from a collection of breathtaking stock footage or import your own background photo or video.</p>
-				</div>
-			</div>
-			<div class="sectionRight">
-				<img src="igtv.png"class="igtv"/>
-			</div>
-		</div>
-
-
-		<div class="section">
-			<div class="sectionLeft">
-				<img src="apps.png"class="apps"/>
-			</div>
-			<div class="sectionRight">
-				<div class="textDivRight">
-					<h1 class="heading2">One price.</h1>
-					<h1 class="heading3">No subscriptions. Updated regularly.</h1>
-					<p class="paragraph2">A product is never perfect, this app will undergo constant improvements based on your feedback. New animations, fonts, and other content will be regularly added.</p>
-				</div>
-			</div>
-		</div>
-
-		<footer>
-		</footer>
+	<body class="spaceBody">
+		<center>
+		<img height=300 class="spaceImage" src="space.jpg"/>
+		<p class="spaceParagraph">
+			Our smartphones are more powerful than the computer that was used on the Apollo 11/Saturn Launch Vehicle by a factor of 1000. If that computer took us to the moon, think of all things we can accomplish with the super computers in our pockets.
+		</p>
+		</center>
 	</body>
 </html>
