--- a/frames.html
+++ b/frames.html
@@ -73,7 +73,7 @@
 				<div class="textDivLeft">
 					<h1 class="heading2">Built for vertical video.</h1>
 					<h1 class="heading3">Step up your <br/>IGTV game.</h1>
-					<p class="paragraph2">Choose your background image or video from a collection of breathtaking stock footage or import your own background photo or video.</p>
+					<p class="paragraph2">Frames is built for creating vertical videos ideal for Instagram stories, IGTV, Snapchat and other platforms that support vertical video.</p>
 				</div>
 			</div>
 			<div class="sectionRight">
