--- a/frames.html
+++ b/frames.html
@@ -27,10 +27,10 @@ window['_fs_namespace'] = 'FS';
 	</head>
 	<body>
 		<header>
-			<a href=""><img class="logo" src="logo.png"/></a>
-			<a href=""><img class="ph" src="ph.png"/></a>
-			<a href=""><img class="tw" src="twitter.png"/></a>
-			<a href=""><img class="ig" src="instagram.png"/></a>
+			<a href="" target="_blank"><img class="logo" src="logo.png"/></a>
+			<a href="https://www.producthunt.com/posts/frames-4" target="_blank"><img class="ph" src="ph.png"/></a>
+			<a href="https://twitter.com/hellolayer" target="_blank"><img class="tw" src="twitter.png"/></a>
+			<a href="https://www.instagram.com/layer.app" target="_blank"><img class="ig" src="instagram.png"/></a>
 			<a href="https://itunes.apple.com/us/app/frames-create-short-videos/id1445360125?mt=8" target="_blank"><img class="download" src="appstore.png" /></a>
 		</header>
 		<section class="section-one">
